<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:useDefaultMargins="true">

        <TextView style="@style/ContactLabelTextView" android:text="@string/label_name" android:layout_row="0" android:layout_column="0" />
        <TextView style="@style/ContactLabelTextView" android:text="@string/label_phone" android:layout_row="1" android:layout_column="0" />
        <TextView style="@style/ContactLabelTextView" android:text="@string/label_email" android:layout_row="2" android:layout_column="0" />
        <TextView style="@style/ContactLabelTextView" android:text="@string/label_street" android:layout_row="3" android:layout_column="0" />
        <TextView style="@style/ContactLabelTextView" android:text="@string/label_city" android:layout_row="4" android:layout_column="0" />
        <TextView style="@style/ContactLabelTextView" android:text="@string/label_state" android:layout_row="5" android:layout_column="0" />
        <TextView style="@style/ContactLabelTextView" android:text="@string/label_zip" android:layout_row="6" android:layout_column="0" />

        <TextView android:id="@+id/nameTextView" style="@style/ContactTextView" android:layout_row="0" android:layout_column="1" />
        <TextView android:id="@+id/phoneTextView" style="@style/ContactTextView" android:layout_row="1" android:layout_column="1" />
        <TextView android:id="@+id/emailTextView" style="@style/ContactTextView" android:layout_row="2" android:layout_column="1" />
        <TextView android:id="@+id/streetTextView" style="@style/ContactTextView" android:layout_row="3" android:layout_column="1" />
        <TextView android:id="@+id/cityTextView" style="@style/ContactTextView" android:layout_row="4" android:layout_column="1" />
        <TextView android:id="@+id/stateTextView" style="@style/ContactTextView" android:layout_row="5" android:layout_column="1" />
        <TextView android:id="@+id/zipTextView" style="@style/ContactTextView" android:layout_row="6" android:layout_column="1" />
    </GridLayout>
</ScrollView>